Added enter key functionality

--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head onload="display()">
-    <script type="text/javascript" src="todo.js"></script>
+  <head >
+    
     <link href="https://css.gg/css?=|list" rel="stylesheet" />
     <link rel="stylesheet" href="todo.css" />
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body onload="display()">
     <div class="titleBox">
       <p class="title">TO - DO LIST</p>
     </div>
@@ -40,5 +40,6 @@
       </div>
       <div id="tasks"></div>
     </div>
+    <script type="text/javascript" src="todo.js"></script>
   </body>
 </html>
