--- a/todo.html
+++ b/todo.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="taskbox">
         <i class="gg-list" style="font-size:60px;"></i>
-        <input id="inputbox" type="text" placeholder="Add a task..." />
+        <input id="inputbox" type="text" placeholder="Add a task..." onkeydown="onenter()"/>
         <input type="hidden" id="index" />
         <input type="submit" onclick="onadd()" id="add" value="ADD!" />
         <input
